testsuite/tests/properties/invalid_external/invalid_memoized.lkt
import common

class Example: FooNode {
    @exported @external() @memoized fun p(): Bool
}
